try to prevent click color on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -132,7 +132,16 @@ a {
 }
 }
 
-a:visited { outline: none; }
+/* a:visited { outline: none; } */
+a {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 
 .back {
     cursor: pointer;
